2013-10-24  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* README: Remove version-specific text.

2013-10-22  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-common.txt:
	* data/tdict-geo.txt:
	* data/tdict-history.txt:
	* data/tdict-ict.txt:
	* data/tdict-proper.txt:
	* data/tdict-science.txt:
	* data/tdict-spell.txt: Add words.

2013-09-24  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-common.txt:
	* data/tdict-ict.txt:
	* data/tdict-proper.txt:
	* data/tdict-science.txt: Add words.

2013-09-23  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Check for doxygen required version.

	* configure.ac:
	  - When doxygen-doc is enabled, also check doxygen version.

2013-09-23  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Update Doxyfile.

	* doc/Doxyfile.in:
	  - Updated with 'doxygen -u'.

2013-09-23  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Fix automake warnings.

	* src/thbrk/Makefile.am:
	* src/thcell/Makefile.am:
	* src/thcoll/Makefile.am:
	* src/thctype/Makefile.am:
	* src/thinp/Makefile.am:
	* src/thrend/Makefile.am:
	* src/thstr/Makefile.am:
	* src/thwbrk/Makefile.am:
	* src/thwchar/Makefile.am:
	* src/thwctype/Makefile.am:
	* src/thwstr/Makefile.am:
	* tests/Makefile.am:
	  - Replace deprecated INCLUDES with AM_CPPFLAGS.

2013-08-02  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-common.txt:
	* data/tdict-district.txt:
	* data/tdict-ict.txt:
	* data/tdict-proper.txt: Add words.

	* data/tdict-std.txt: Remove 'พาส' whose use is rare and which
	potentially causes ambiguity like in 'พาสมองเสื่อม'.

2013-02-24  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-common.txt:
	* data/tdict-geo.txt:
	* data/tdict-ict.txt:
	* data/tdict-lang-ethnic.txt:
	* data/tdict-proper.txt:
	* data/tdict-science.txt: Add words.

2013-02-24  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Remove compound words that potentially cause ambiguity.

	* data/tdict-std-compound.txt: